projects/vb6parse/snapshots/parsers/cst/type_definitions/type_statements/type_with_object_reference.snap
---
source: projects/vb6parse/tests/type_definitions/type_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: TypeStatement
      children:
        - kind: TypeKeyword
          text: Type
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: DataContainer
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: Identifier
              text: RecordSet
            - kind: Whitespace
              text: " "
            - kind: AsKeyword
              text: As
            - kind: Whitespace
              text: " "
            - kind: ObjectKeyword
              text: Object
            - kind: Newline
              text: "\n"
            - kind: Whitespace
              text: "    "
            - kind: Identifier
              text: Connection
            - kind: Whitespace
              text: " "
            - kind: AsKeyword
              text: As
            - kind: Whitespace
              text: " "
            - kind: ObjectKeyword
              text: Object
            - kind: Newline
              text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: TypeKeyword
          text: Type
        - kind: Newline
          text: "\n"
